[gd_scene load_steps=6 format=3 uid="uid://sfkwkk2b0rwo"]

[ext_resource type="Script" uid="uid://cfj6jorivqiha" path="res://generator_demo.gd" id="1"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_r36sx"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_yybav"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_8tsrq"]

[sub_resource type="LabelSettings" id="LabelSettings_yybav"]

[node name="Generator" type="Node"]
script = ExtResource("1")

[node name="player5" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_r36sx")
volume_db = -50.979
autoplay = true

[node name="player4" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_r36sx")
volume_db = -48.828
autoplay = true

[node name="player3" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_r36sx")
volume_db = -45.939
autoplay = true

[node name="player2" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_yybav")
volume_db = -40.479
autoplay = true

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_8tsrq")
volume_db = -29.374
autoplay = true

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -118.0
offset_right = 200.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="FrequencyTitle" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.882353, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Generated Audio Frequency"

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/FrequencyTitle"]
layout_mode = 0
offset_left = 329.0
offset_top = 1.0
offset_right = 496.0
offset_bottom = 56.0
text = "Harmonic Series Ratio Modifier"

[node name="HarmonicLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.882353, 1, 1)
theme_override_font_sizes/font_size = 24
label_settings = SubResource("LabelSettings_yybav")

[node name="m" type="LineEdit" parent="CenterContainer/HarmonicLabel"]
layout_mode = 0
offset_left = 344.0
offset_top = 1.0
offset_right = 412.5625
offset_bottom = 32.0
placeholder_text = "1"

[node name="Freq Inputs" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Freq 1" type="LineEdit" parent="CenterContainer/Freq Inputs"]
layout_mode = 2

[node name="Freq 2" type="LineEdit" parent="CenterContainer/Freq Inputs"]
layout_mode = 2

[node name="Freq 3" type="LineEdit" parent="CenterContainer/Freq Inputs"]
layout_mode = 2

[node name="Freq 4" type="LineEdit" parent="CenterContainer/Freq Inputs"]
layout_mode = 2

[node name="Freq 5" type="LineEdit" parent="CenterContainer/Freq Inputs"]
unique_name_in_owner = true
layout_mode = 2

[node name="HarmonicSeriesToggle" type="CheckButton" parent="CenterContainer/Freq Inputs"]
unique_name_in_owner = true
layout_mode = 2

[node name="MajorChordToggle" type="CheckButton" parent="CenterContainer/Freq Inputs"]
unique_name_in_owner = true
layout_mode = 2

[node name="Frequency" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FrequencyLabel1" type="Label" parent="CenterContainer/Frequency"]
unique_name_in_owner = true
layout_mode = 2
text = "440 Hz"

[node name="Frequency1HSlider" type="HSlider" parent="CenterContainer/Frequency"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 5000.0
value = 440.0

[node name="Frequency2" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FrequencyLabel2" type="Label" parent="CenterContainer/Frequency2"]
unique_name_in_owner = true
layout_mode = 2
text = "440 Hz"

[node name="Frequency2HSlider" type="HSlider" parent="CenterContainer/Frequency2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 5000.0
value = 440.0

[node name="Frequency3" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FrequencyLabel3" type="Label" parent="CenterContainer/Frequency3"]
unique_name_in_owner = true
layout_mode = 2
text = "440 Hz"

[node name="Frequency3HSlider" type="HSlider" parent="CenterContainer/Frequency3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 5000.0
value = 440.0

[node name="Frequency4" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FrequencyLabel4" type="Label" parent="CenterContainer/Frequency4"]
unique_name_in_owner = true
layout_mode = 2
text = "440 Hz"

[node name="Frequency4HSlider" type="HSlider" parent="CenterContainer/Frequency4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 5000.0
value = 440.0

[node name="Frequency5" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FrequencyLabel5" type="Label" parent="CenterContainer/Frequency5"]
unique_name_in_owner = true
layout_mode = 2
text = "440 Hz"

[node name="Frequency5HSlider" type="HSlider" parent="CenterContainer/Frequency5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 5000.0
value = 440.0

[node name="HSeparator" type="HSeparator" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeTitle" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.882353, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Playback Volume"

[node name="Volume" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeLabel" type="Label" parent="CenterContainer/Volume"]
unique_name_in_owner = true
layout_mode = 2
text = "-12.04 dB"

[node name="VolumeHSlider" type="HSlider" parent="CenterContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.25

[node name="Volume2" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeLabel2" type="Label" parent="CenterContainer/Volume2"]
unique_name_in_owner = true
layout_mode = 2
text = "-12.04 dB"

[node name="Volume2HSlider" type="HSlider" parent="CenterContainer/Volume2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.25

[node name="Volume3" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeLabel3" type="Label" parent="CenterContainer/Volume3"]
unique_name_in_owner = true
layout_mode = 2
text = "-12.04 dB"

[node name="Volume3HSlider" type="HSlider" parent="CenterContainer/Volume3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.25

[node name="Volume4" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeLabel4" type="Label" parent="CenterContainer/Volume4"]
unique_name_in_owner = true
layout_mode = 2
text = "-12.04 dB"

[node name="Volume4HSlider" type="HSlider" parent="CenterContainer/Volume4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.25

[node name="Volume5" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeLabel5" type="Label" parent="CenterContainer/Volume5"]
unique_name_in_owner = true
layout_mode = 2
text = "-12.04 dB"

[node name="Volume5HSlider" type="HSlider" parent="CenterContainer/Volume5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.25

[node name="Frequency Buttons" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062000003
offset_left = -2.0
offset_top = 118.0
offset_right = 295.68
offset_bottom = 582.824

[node name="Button" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button2" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "B0 - 29.135 Hz"

[node name="Button3" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button4" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button5" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button6" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button7" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button8" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button9" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button10" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button11" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[node name="Button12" type="Button" parent="Frequency Buttons"]
layout_mode = 2
text = "A0 - 27.5 Hz"

[connection signal="text_changed" from="CenterContainer/HarmonicLabel/m" to="." method="_on_m_text_changed"]
[connection signal="text_changed" from="CenterContainer/Freq Inputs/Freq 1" to="." method="_on_freq_1_text_changed"]
[connection signal="text_changed" from="CenterContainer/Freq Inputs/Freq 2" to="." method="_on_freq_2_text_changed"]
[connection signal="text_changed" from="CenterContainer/Freq Inputs/Freq 3" to="." method="_on_freq_3_text_changed"]
[connection signal="text_changed" from="CenterContainer/Freq Inputs/Freq 4" to="." method="_on_freq_4_text_changed"]
[connection signal="text_changed" from="CenterContainer/Freq Inputs/Freq 5" to="." method="_on_freq_5_text_changed"]
[connection signal="toggled" from="CenterContainer/Freq Inputs/HarmonicSeriesToggle" to="." method="_on_harmonic_mode_toggled"]
[connection signal="toggled" from="CenterContainer/Freq Inputs/MajorChordToggle" to="." method="_on_major_chord_toggle_toggled"]
[connection signal="value_changed" from="CenterContainer/Frequency/Frequency1HSlider" to="." method="_on_frequency_h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Frequency2/Frequency2HSlider" to="." method="_on_frequency_2h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Frequency3/Frequency3HSlider" to="." method="_on_frequency_3h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Frequency4/Frequency4HSlider" to="." method="_on_frequency_4h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Frequency5/Frequency5HSlider" to="." method="_on_frequency_5h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Volume/VolumeHSlider" to="." method="_on_volume_h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Volume2/Volume2HSlider" to="." method="_on_volume_2h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Volume3/Volume3HSlider" to="." method="_on_volume_3h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Volume4/Volume4HSlider" to="." method="_on_volume_4h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Volume5/Volume5HSlider" to="." method="_on_volume_5h_slider_value_changed"]
[connection signal="pressed" from="Frequency Buttons/Button" to="." method="_on_button_pressed"]
